# mlops-zoocamp-hw

./: .gitignore
components/: hpo.py  pyproject.toml  register_model.py  train.py
deployment/: .dockerignore  Dockerfile  Pipfile  starter.ipynb  starter.py
notebooks/: eda-green.ipynb  eda.ipynb  pyproject.toml
orchestration/: homework.py  pyproject.toml
