[tool.poetry]
name = "mlops-zoomcamp-notebooks"
version = "0.1.0"
description = ""
authors = ["Rinat Gareev <rgareev@provectus.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
pyarrow = "^8.0.0"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
