[tool.poetry]
name = "mlops-zoomcamp-orchestration"
version = "0.1.0"
description = ""
authors = ["Rinat Gareev <aldvinaldvin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"
pyarrow = "^8.0.0"
prefect = "2.0b5"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
